test/core/errors/packages_error/zs/wrong_import_name_error.zs
package wrong_import_name_error;

import wrong_import_name.*;
